# golf_experiments

./: README.md  baseline.md
.claude/: settings.local.json
COLD_EXPR/: pyproject.toml  step.md
COLD_EXPR/configs/: baseline.yaml  c01_gla_hybrid.yaml  c02_mamba_hybrid.yaml  c03_xlstm_hybrid.yaml  c04_rwkv.yaml  c05_mixed_hybrid.yaml  c06_basis_sharing.yaml  c07_relaxed_recursive.yaml  c08_engramlite.yaml  c09_swiglu.yaml  c10_no_parallel_res.yaml  c11_ema_sweep.yaml  c12_wd_sweep.yaml  c13_recurrence_sweep.yaml  c14_warmdown_sweep.yaml  c15_sdclip_sweep.yaml  c16_mixed_precision.yaml  c17_compressor_sweep.yaml  c18_ttt_sweep.yaml  c19_slot_vs_lora.yaml  c20_sliding_window.yaml  c21_sp16384.yaml
COLD_EXPR/golfcomp/: config.py
COLD_EXPR/golfcomp/evaluation/: evaluator.py  metrics.py  ttt.py
COLD_EXPR/golfcomp/experiments/: analysis.py  optuna_search.py  runner.py  search_spaces.py
COLD_EXPR/golfcomp/models/: __init__.py  base.py  gla_hybrid.py  hybrid_base.py  mamba_hybrid.py  mixed_hybrid.py  rwkv.py  transformer.py  xlstm_hybrid.py
COLD_EXPR/golfcomp/models/components/: activations.py  attention.py  embeddings.py  position.py  recurrence.py  residuals.py
COLD_EXPR/golfcomp/quantization/: __init__.py  compression.py  gptq.py  mixed.py  sdclip.py
COLD_EXPR/golfcomp/training/: data.py  ema.py  optimizers.py  schedulers.py  trainer.py
COLD_EXPR/golfcomp/utils/: artifact.py  logging.py  seed.py
COLD_EXPR/scripts/: analyze_results.py  download_data.py  run_all_cold.py  run_experiment.py  run_optuna.py  train_tokenizer.py
experiments/: cold-exp.md  (+2 more)
(+4 files in other folders)
