[project]
name = "golfcomp"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "flash-attn>=2.5",
    "sentencepiece>=0.2",
    "optuna>=3.5",
    "scipy>=1.12",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "brotli>=1.1",
    "zstandard>=0.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gla = ["fla>=0.1"]
mamba = ["mamba-ssm>=2.0"]
all = ["golfcomp[gla,mamba]"]
