[project]
name = "golfcomp"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.7",
    "numpy>=1.24",
    "sentencepiece>=0.2",
    "optuna>=3.5",
    "scipy>=1.12",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "brotli>=1.1",
    "zstandard>=0.22",
    "pyyaml>=6.0",
    "triton>=3.3",
    "einops",
]

[project.optional-dependencies]
gla = ["flash-linear-attention>=0.3.2"]
mamba = ["mamba-ssm>=2.3.1", "causal-conv1d"]
fa = ["flash-attn>=2.7"]
data = ["huggingface_hub>=0.20"]
all = ["golfcomp[gla,mamba,data]"]
